# trading_bot

./: .gitignore  CMakeLists.txt  binacpp.cpp  binacpp.h  binacpp_websocket.h  binance_api.cpp  binance_api.h  database.sql  main.cpp  place_order.cpp  place_order.h  readme.md
external_resources/: binacpp_utils.cpp  place_order.cpp
frontend/: index.html
src/api/: curl_main.cpp  curl_main.h
src/api/alphavantage/: alphavantage_api.cpp  alphavantage_api.h
src/api/binance/: binance_api.cpp  binance_api.h
test/: main.cpp  trade_endpoint.cpp
trading-servant/: package-lock.json  package.json
trading-servant/src/: App.css  App.js
trading-servant/src/components/: Chart.js  Header.js  Indicators.js  SelectionBar.js  Strategies.js  Strategy.js
